# mcp-readwise

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  compose.yaml  komodo.toml  package-lock.json  package.json  pyproject.toml
.claude/agent-memory/komodo-infra/: MEMORY.md  project_mcp-readwise-stack.md
.github/: dependabot.yml
mcp_readwise/: __init__.py  __main__.py  client.py  config.py  server.py
mcp_readwise/models/: __init__.py  books.py  highlights.py  reader.py  tags.py
mcp_readwise/tools/: __init__.py  books.py  export.py  highlights.py  reader.py  tags.py
openspec/changes/migrate-to-standard-mcp-setup/: design.md  proposal.md  tasks.md
openspec/changes/migrate-to-standard-mcp-setup/specs/book-tools/: spec.md
openspec/changes/migrate-to-standard-mcp-setup/specs/deployment-config/: spec.md
openspec/changes/migrate-to-standard-mcp-setup/specs/highlight-tools/: spec.md
openspec/changes/migrate-to-standard-mcp-setup/specs/mcp-standards-doc/: spec.md
openspec/changes/migrate-to-standard-mcp-setup/specs/reader-tools/: spec.md
openspec/changes/migrate-to-standard-mcp-setup/specs/server-infrastructure/: spec.md
openspec/changes/migrate-to-standard-mcp-setup/specs/tag-tools/: spec.md
src/: mcp-http-server.ts
tests/: conftest.py  test_client.py  test_tools.py
